adding usecase implementation

--- a/clean-arch/src/main/resources/message/messages.properties
+++ b/clean-arch/src/main/resources/message/messages.properties
@@ -1,2 +1,7 @@
 #error messages
+#Controller exception
 001.001 = The City must not be blank.
+
+#Domain messages
+002.002 = Location Weather must not be null.
+002.003 = Songs must not be null.
