adding error handling

--- a/clean-arch/src/main/resources/message/messages.properties
+++ b/clean-arch/src/main/resources/message/messages.properties
@@ -5,3 +5,6 @@
 #Domain messages
 002.002 = Location Weather must not be null.
 002.003 = Songs must not be null.
+
+#Domain errors
+003.001 = Any Song Category was found.
