updating custom exception handler to catch gateway exception

--- a/clean-arch/src/main/resources/message/messages.properties
+++ b/clean-arch/src/main/resources/message/messages.properties
@@ -12,4 +12,4 @@
 #Gateway errors
 004.001 = City name was not found.
 004.002 = Failed process to request local weather
-004.003 = Failed request to local weather. There is a server error.
+004.003 = Failed local weather request.
