adding song gateway classes and tests

--- a/clean-arch/src/main/resources/message/messages.properties
+++ b/clean-arch/src/main/resources/message/messages.properties
@@ -11,5 +11,6 @@
 
 #Gateway errors
 004.001 = City name was not found.
-004.002 = Failed process to request local weather
+004.002 = Failed process to request local weather.
 004.003 = Failed local weather request.
+004.004 = Request song details has error.
