adding lat and long endpoint. adding tests to cover new endpoint

--- a/clean-arch/src/main/resources/message/messages.properties
+++ b/clean-arch/src/main/resources/message/messages.properties
@@ -1,6 +1,10 @@
 #error messages
 #Controller exception
 001.001 = The City must not be blank.
+001.002 = The Latitude must not be blank.
+001.003 = The Latitude is invalid. A valid value needs to be between -180.00 and 180.00.
+001.004 = The Longitude must not be blank.
+001.005 = The Longitude is invalid. A valid value needs to be between -45.00 and 45.00.
 
 #Domain messages
 002.002 = Location Weather must not be null.
